style/main.css
/* ... */
.stat input {
  padding: 0.5rem;
  border-radius: 5px;
  border: 1px solid #1d2d33;
  font-size: 1rem;
  width: 120px;
}

main > div {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

html,
body {
  overflow-x: hidden;
  max-width: 100vw;
}

/* Responsiveness */
/* Home Page */
@media (max-width: 1000px) {
  .logo {
    width: 200px;
  }


  /* Calendar Page */
  .calendar {
    width: 80%;
    padding: 0.5rem;
    overflow-x: auto;
  }

  .calendarGrid {
    width: 100%;
    height: 100%;
  }
  .calendarHeader {
    flex-direction: row;
    gap: 0.5rem;
  }
  .monthYear {
    width: 80%;
    text-align: center;
  }
  .calendarHeader button {
    width: 36px;
    height: 36px;
  }
  .date {
    width: 70%;
    padding: 10px;
  }
  .days {
    font-size: smaller;
  }
  .popup-content {
    align-items: center;
    justify-content: center;
    width: 70%;
    text-align: center;
  }
  .popup-content p {
    font-size: medium;
  }
  #addExerciseBtn {
    justify-content: center;
    width: 30%;
    padding: 8px;
  }
  footer {
    flex-direction: row;
    align-items: baseline;
    gap: 1rem;
  }
  .footer-column {
    width: 100%;
    flex-direction: row;
    align-items: flex-start;
    width: 100%;
    text-align: center;
  }

  @media (max-width: 550px) {
    .calendar {
      width: 100%;
      padding: 1rem;
      border-radius: border-box;
      overflow-x: hidden;
    }
    .calendarHeader {
      gap: 0.05rem;
      justify-content: space-between;
    }
  }

  /* Planner Page */
  .planner {
    display: table;
    width: 100%;
    overflow-x: auto;
    margin-bottom: 1rem;
    margin-top: 0;
    padding: 5%;
  }

  main {
    display: block;
  }

  .planner thead {
    display: none;
  }

  .planner tbody tr {
    display: table-row;
    flex-direction: row;
    gap: 2rem;
    justify-content: space-between;
    margin-bottom: 2rem;
  }

  .planner td {
    display: table-cell;
    vertical-align: middle;
    padding: 0.3rem;
  }
  .planner td::before {
    content: attr(data-label);
    font-weight: bold;
  }

  .planner input,
  .planner select {
    width: 100%;
    font-size: smaller;
  }

  .planner-row-buttons button {
    width: 100%;
  }

  .buttonWraper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    gap: 1rem;
    justify-content: space-between;
  }

  #addButton {
    display: block;
    margin-left: 5%;
  }

  #confirmButton {
    display: block;
    margin-left: 5%;
  }

  #selectedDate {
    font-size: large;
    text-align: center;
    justify-content: flex-start;
    padding: 3%;
    gap: 0;
    margin-bottom: 0;
  }

  footer {
    flex-direction: row;
    align-items: baseline;
    gap: 1rem;
  }
  .footer-column {
    width: 100%;
    flex-direction: row;
    align-items: flex-start;
    width: 100%;
    text-align: center;
  }
  main {
    flex: 1;
  }

  #usernameDisplay {
    opacity: 0;
  }
}

